--- a/pervoe.xaml
+++ b/pervoe.xaml
@@ -9,9 +9,37 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="dg1"/>
-        <Button Grid.Row="1" Content="Выйти в главное меню" Click="cl1"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <DataGrid x:Name="dg1" IsReadOnly="True" Grid.ColumnSpan="6" SelectionChanged="dg1_SelectionChanged"/>
+        <Button Grid.Row="6" Content="Выйти в главное меню" Click="cl1" Grid.ColumnSpan="6"/>
+        <Button x:Name="dobavl" Grid.Row="3" Grid.ColumnSpan="6" Click="cl2" Content="Добавить"/>
+        <Button Grid.Row="4" Grid.ColumnSpan="6" Content="Изменение" Click="cl3"/>
+        <Button Grid.Row="5" Grid.ColumnSpan="6" Click="cl4" Content="Удаление"/>
+        <TextBlock Text="Введите имя:" Grid.Row="1" TextWrapping="Wrap"/>
+        <TextBlock Text="Введите фамилию:" Grid.Row="1" Grid.Column="1"  TextWrapping="Wrap"/>
+        <TextBlock Text="Введите отчество:" Grid.Row="1" Grid.Column="2" TextWrapping="Wrap"/>
+        <TextBlock Text="Введите FanId:" Grid.Row="1" Grid.Column="3" TextWrapping="Wrap"/>
+        <TextBlock Text="Введите тел. номер:" Grid.Column="4" Grid.Row="1" TextWrapping="Wrap"/>
+        <TextBlock Text="Введите почту:" Grid.Row="1" Grid.Column="5" TextWrapping="Wrap"/>
+        <TextBox x:Name="imya" Grid.Row="2" IsEnabled="True" />
+        <TextBox x:Name="fam" Grid.Row="2" Grid.Column="1" IsEnabled="True"/>
+        <TextBox x:Name="otch" Grid.Row="2" Grid.Column="2" IsEnabled="True"/>
+        <TextBox x:Name="fanid" Grid.Row="2" Grid.Column="3" IsEnabled="True"/>
+        <TextBox x:Name="tel" Grid.Row="2" Grid.Column="4" IsEnabled="True"/>
+        <TextBox x:Name="email" Grid.Row="2" Grid.Column="5" IsEnabled="True"/>
     </Grid>
 </Window>
