--- a/tri.xaml
+++ b/tri.xaml
@@ -9,9 +9,31 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
         </Grid.RowDefinitions>
-        <DataGrid x:Name="dg3"/>
-        <Button Grid.Row="1" Content="Выйти в главное меню" Click="cl3"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <DataGrid x:Name="dg3" Grid.ColumnSpan="4" IsReadOnly="True" SelectionChanged="dg3_SelectionChanged"/>
+        <Button Grid.Row="6" Content="Выйти в главное меню" Click="vyhod" Grid.ColumnSpan="4"/>
+        <Button Grid.Row="5" Content="Удалить" Grid.ColumnSpan="4" Click="udal"/>
+        <Button Grid.Row="4" Content="Изменить" Grid.ColumnSpan="4" Click="izmen"/>
+        <Button Grid.Row="3" Content="Добавить" Grid.ColumnSpan="4" Click="dobavl"/>
+        <TextBlock Text="Введите дату:" Grid.Row="1"/>
+        <TextBlock Text="Введите цену:" Grid.Row="1" Grid.Column="1"/>
+        <TextBlock Text="Введите ID клиента:" Grid.Row="1" Grid.Column="2"/>
+        <TextBlock Text="Введите ID места:" Grid.Row="1" Grid.Column="3"/>
+        <TextBox x:Name="data" Grid.Row="2"/>
+        <TextBox x:Name="price" Grid.Row="2" Grid.Column="1"/>
+        <TextBox x:Name="ID1" Grid.Row="2" Grid.Column="2"/>
+        <TextBox x:Name="ID2" Grid.Row="2" Grid.Column="3"/>
     </Grid>
 </Window>
